Agragado al boton home la propiedad z-index por culpa de un bug en la pagina de productos

--- a/style/styles.css
+++ b/style/styles.css
@@ -456,6 +456,7 @@ footer {
     margin-bottom: 5vh;
     margin-right: 5vh;
     opacity: 0.7;
+    z-index: 1;
 }
 
 @media (hover:hover) {
